--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,119 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>BayresWeb</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>BayresWeb</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <style>
+        .loader-container {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(0, 0, 0, 0.3);
+            z-index: 1001;
+        }
+
+        .loader {
+            margin: 0 auto;
+            width: 60px;
+            height: 50px;
+            text-align: center;
+            font-size: 10px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translateY(-50%) translateX(-50%);
+        }
+
+        .loader > div {
+            height: 100%;
+            width: 8px;
+            display: inline-block;
+            float: left;
+            margin-left: 2px;
+            -webkit-animation: delay 0.8s infinite ease-in-out;
+            animation: delay 0.8s infinite ease-in-out;
+        }
+
+        .bar1 {
+            background-color: #754fa0;
+        }
+
+        .bar2 {
+            background-color: #09b7bf;
+            -webkit-animation-delay: -0.7s;
+            animation-delay: -0.7s;
+        }
+
+        .bar3 {
+            background-color: #90d36b;
+            -webkit-animation-delay: -0.6s;
+            animation-delay: -0.6s;
+        }
+
+        .bar4 {
+            background-color: #f2d40d;
+            -webkit-animation-delay: -0.5s;
+            animation-delay: -0.5s;
+        }
+
+        .bar5 {
+            background-color: #fcb12b;
+            -webkit-animation-delay: -0.4s;
+            animation-delay: -0.4s;
+        }
+
+        .bar6 {
+            background-color: #ed1b72;
+            -webkit-animation-delay: -0.3s;
+            animation-delay: -0.3s;
+        }
+
+        @-webkit-keyframes delay {
+            0%, 40%, 100% {
+                -webkit-transform: scaleY(0.05)
+            }
+            20% {
+                -webkit-transform: scaleY(1.0)
+            }
+        }
+
+        @keyframes delay {
+            0%, 40%, 100% {
+                transform: scaleY(0.05);
+                -webkit-transform: scaleY(0.05);
+            }
+            20% {
+                transform: scaleY(1.0);
+                -webkit-transform: scaleY(1.0);
+            }
+        }
+    </style>
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+<app-root>
+    La conexión es un poco lenta, pero no te preocupes, ya llega Bayres!
+    <div class="loader-container">
+        <div class="loader">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+            <div class="bar4"></div>
+            <div class="bar5"></div>
+            <div class="bar6"></div>
+        </div>
+    </div>
+</app-root>
+
 </body>
 
 </html>
