--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BayresWeb</title>
+    <title>BayresNoProblem</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
@@ -102,7 +102,6 @@
 
 <body>
 <app-root>
-    La conexión es un poco lenta, pero no te preocupes, ya llega Bayres!
     <div class="loader-container">
         <div class="loader">
             <div class="bar1"></div>
@@ -115,6 +114,16 @@
     </div>
 </app-root>
 
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-56571440-9', 'auto');
+    ga('send', 'pageview');
+
+</script>
 </body>
 
 </html>
